crates/analyzer/tests/snapshots/errors__self_in_standalone_fn.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `self` can only be used in contract, struct, trait or impl functions
  ┌─ compile_errors/self_in_standalone_fn.fe:1:12
  │
1 │ fn pure_fn(self) {
  │            ^^^^ not allowed in functions defined directly in a module

error: `self` can only be used in contract, struct, trait or impl functions
  ┌─ compile_errors/self_in_standalone_fn.fe:2:5
  │
2 │     self.mut_fn()
  │     ^^^^ not allowed in functions defined directly in a module

error: `pure_fn` expects 0 arguments, but 1 was provided
  ┌─ compile_errors/self_in_standalone_fn.fe:1:4
  │
1 │ fn pure_fn(self) {
  │    ^^^^^^^ expects 0 arguments
  ·
7 │         pure_fn(self)
  │                 ---- supplied 1 argument


